--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Archivos sensibles
 config.js
 googleConfig.js
-
-# Directorios de node
-node_modules/
-
-# Archivos de sistema
-.DS_Store
-Thumbs.db
+.env.local
